# administrative-assistant

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: acreditacio_idiomes.json  devolucio_preus_publics.json  nota_mitjana.json  output_abans-de-matricular-te-estudis-iniciats.data  output_acreditacio-de-coneixements-d-idiomes.data  output_actualitza-les-teves-dades.data  output_admissio-als-estudis-de-grau.data  output_admissio.data  output_agenda.data  output_aliances.data
notebooks/: web_summarization.ipynb
services/app/: app.py  styles.py
services/app/llm/clients/: salamandra_client.py
services/app/llm/utils/: utils.py
services/web/: Dockerfile  app.py
services/web/llm-clients/: llama_client.py
services/web/llm-clients/utils/: embedding.py  utils.py
src/llm/: inference.py  other_llm_model.py  rag.py  salamandra_client.py
src/llm/clients/: groq_llama_client.py  salamandra_client.py
src/llm/data/: finetune.txt
src/llm/utils/: utils.py
src/scraper/: requirements.txt  run_scraper.py
src/scraper/scraper/: pipelines.py  settings.py
src/scraper/scraper/spiders/: upf_spider.py
src/summarizer/: RAG.py  salamandra_client.py
streamlit-app/: app.py  prova.py  styles.py
